# cppLearning

./: CMakeLists.txt  README.md
include/: case_for_func_var_and_return.h  case_for_no_virtual.h  case_for_virtual.h  foo.h
test/: 1_1.cpp  2_1.cpp  2_2.cpp  2_3.cpp  2_4.cpp  2_5.cpp  2_6.cpp  2_end.cpp  3_1.cpp  3_2.cpp  3_3.cpp  5_2.cpp  5_3.cpp  5_4.cpp  test_for_MAT_IMG.cpp  test_for_MAT_IMG_thread.cpp  test_for_NRVO.cpp  test_for_RAII_and_PTR.cpp  test_for_compare_mat_caculate.cpp  test_for_compile_and_run_time.cpp  test_for_differ_val.cpp  test_for_func_var_and_return.cpp  test_for_lamda.cpp  test_for_modern.cpp  test_for_no_virtual.cpp  test_for_ptr.cpp  test_for_ref.cpp  test_for_shallow_and_deep_copy.cpp  test_for_storage.cpp  test_for_storage_type.cpp  test_for_virtual.cpp
